fix the layout problem of the comment section when the

--- a/mainApp/style.css
+++ b/mainApp/style.css
@@ -311,15 +311,16 @@ main .container .left .profile {
 }
 
 .user-comment img{
-  min-width:23px;
+  max-width: 30px;
+  min-width:30px;
   width: 8%;
-  height: 8%
+  height: 8%;
   
 }
 
 .user-comment{
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .user-comment-body{
